# LapisParser

./: .gitignore  CMakeLists.txt  VParser  antiInput2.yaml  doxygen_conf.txt  example-ossgroup.xml  example-ossgroup.yaml  input2.yaml  main.cpp  outputXML.yaml  outputYAML.xml  readme.md  test.yaml  xmlTest.xml
RefExpand/: RefExpand.cpp  RefExpand.h
config/: ConfigObject.cpp  ConfigObject.h
data/: BaseDataObject.cpp  BaseDataObject.h  BooleanDataObject.cpp  BooleanDataObject.h  CustomizedDataObject.cpp  CustomizedDataObject.h  DataObjectAdapter.cpp  DataObjectAdapter.h  FileDataObject.cpp  FileDataObject.h  IntegerDataObject.cpp  IntegerDataObject.h  NumberDataObject.cpp  NumberDataObject.h  ObjectDataObject.cpp  ObjectDataObject.h  SequenceDataObject.cpp  SequenceDataObject.h  StringDataObject.cpp  StringDataObject.h
doc/: DocElement.cpp  DocElement.h  DocObjectElement.cpp  DocObjectElement.h  DocScalarElement.cpp  DocScalarElement.h  DocSequenceElement.cpp  DocSequenceElement.h  XMLAdapter.cpp  XMLAdapter.h  YAMLAdapter.cpp  YAMLAdapter.h
error/: DocNodeNotExistError.h  DuplicateParameterNameError.h  DuplicateScenarioElementError.h  DuplicateScenarioNamesError.h  DuplicateTestConfigError.h  Error.cpp  Error.h  FieldIllegalError.cpp  FieldIllegalError.h  FieldInvalidError.cpp  FieldInvalidError.h  FieldMissError.cpp  FieldMissError.h  FileNotExistError.h  FormDataAndBodyConflictError.h  IllegalConsumesForFormData.h  IllegalEnumObjectError.cpp  IllegalEnumObjectError.h  IllegalFileParameterError.h  IllegalIntervalError.cpp  IllegalIntervalError.h  IllegalMIMEListError.h  IllegalPathParameterError.h  IllegalRegexError.cpp  IllegalRegexError.h  InvalidAPIReferenceError.h  InvalidExpressionError.h  InvalidModuleError.h  InvalidResponseTypeError.h  InvalidRootNodeError.cpp  InvalidRootNodeError.h  InvalidScenarioError.h  InvalidSchemeError.cpp  InvalidSchemeError.h  InvalidSetError.h  InvalidStateError.h  InvalidSwaggerSymbolError.cpp  InvalidSwaggerSymbolError.h  InvalidXVeeSymbolError.cpp  InvalidXVeeSymbolError.h  (+24 more)
exec/err/: APINotFoundError.h  APINotParsedError.h  CheckpointNotPassTerminate.h  EndModuleTerminate.h  IllegalInputConstraintError.h  IllegalResponseCodeError.h  IllegalResponseError.h  IllegalResponseFormatError.h  IllegalSetEffectError.h  InvalidURLPatternError.h  LengthExceedTerminate.h  NowayTerminate.h  RequestTimeoutError.h  RequesterInitError.h  RuntimeError.cpp  RuntimeError.h  ScenarioConfigNotParsedError.h  SetEmptyTerminate.h  UnknownRequestError.h
exec/log/: DataLog.h  Logger.cpp  Logger.h  StrLog.h
exec/middleware/: AliMiddleware.cpp  AliMiddleware.h
exec/report/: BaseReport.h  RequesterReport.cpp  RequesterReport.h  ScenarioReport.cpp  ScenarioReport.h  SingleAPIReport.cpp  SingleAPIReport.h  TestCaseReport.cpp  TestCaseReport.h
exec/request/: BaseRequester.cpp  BaseRequester.h  ModuleRequester.cpp  ModuleRequester.h  SingleRequester.cpp  SingleRequester.h
exec/scenario/: ScenarioController.cpp  ScenarioController.h  TestCaseController.cpp  TestCaseController.h
exec/transformer/: ExecTransformer.cpp  ExecTransformer.h
html/: _a_p_i_constraint_object_8h_source.html  _a_p_i_not_found_error_8h_source.html  _a_p_i_not_parsed_error_8h_source.html  _a_p_i_object_8h_source.html  _a_p_i_pool_8h_source.html  _abstract_response_object_8h_source.html  _ali_middleware_8h_source.html  _array_schema_8h_source.html  _base_data_object_8h_source.html  _base_object_8h_source.html  _base_report_8h_source.html  _base_requester_8h_source.html  _boolean_data_object_8h_source.html  _boolean_schema_8h_source.html  _checkpoint_not_pass_terminate_8h_source.html  _config_object_8h_source.html  _controller_8h_source.html  _customized_data_object_8h_source.html  _customized_schema_8h_source.html  _d_o_c_bparser_8h_source.html  _data_log_8h_source.html  _data_object_adapter_8h_source.html  _data_schema_object_8h_source.html  _data_schema_pool_8h_source.html  _doc_element_8h_source.html  _doc_node_not_exist_error_8h_source.html  _doc_object_element_8h_source.html  _doc_scalar_element_8h_source.html  _doc_sequence_element_8h_source.html  _duplicate_parameter_name_error_8h_source.html  _duplicate_scenario_element_error_8h_source.html  _duplicate_scenario_names_error_8h_source.html  _duplicate_test_config_error_8h_source.html  _end_module_terminate_8h_source.html  _enum_object_8h_source.html  _error_8h_source.html  _exec_transformer_8h_source.html  _external_doc_object_8h_source.html  _field_illegal_error_8h_source.html  _field_invalid_error_8h_source.html  (+762 more)
html/search/: all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+46 more)
interface/: Interface.cpp  Interface.h  pythonInterface.cpp  setup.py
interface/CXX/: demo.cpp
ref_expand/: RefExpand.cpp  RefExpand.h
scenario/: Scenario.cpp  Scenario.h  ScenarioConnectionObject.cpp  ScenarioConnectionObject.h  ScenarioInfoObject.cpp  ScenarioInfoObject.h  ScenarioModuleObject.cpp  ScenarioModuleObject.h  ScenarioSetObject.cpp  ScenarioSetObject.h  ScenarioStateObject.cpp  ScenarioStateObject.h  Scenarios.cpp  Scenarios.h
schema/: APIObject.cpp  APIObject.h  APIPool.cpp  APIPool.h  AbstractResponseObject.cpp  AbstractResponseObject.h  BaseObject.cpp  BaseObject.h  Controller.cpp  Controller.h  DataSchemaObject.cpp  DataSchemaObject.h  DataSchemaPool.cpp  DataSchemaPool.h  EnumObject.cpp  EnumObject.h  ExternalDocObject.cpp  ExternalDocObject.h  InfoObject.cpp  InfoObject.h  ParameterObject.cpp  ParameterObject.h  ParameterPool.cpp  ParameterPool.h  ResponsePool.cpp  ResponsePool.h  ScenarioPool.cpp  ScenarioPool.h  SchemesObject.cpp  SchemesObject.h  TagsObject.cpp  TagsObject.h  Utility.cpp  Utility.h
(+79 files in other folders)
